add some model changing and stream processing changes