@@ -35,6 +35,12 @@ lazy val root = (project in file("."))
     Compile / run / fork := true,
     javaOptions ++= Seq(
       "-Xms512m",
-      "-Xmx2g"
+      "-Xmx2g",
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.io=ALL-UNNAMED",
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
     )
   )
